<resources>
    <string name="app_name">MUSEDA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="assign_musedais">뮤즈다는</string>
    <string name="assign_musedais_1">댓글 등 텍스트가 없어요</string>
    <string name="assign_musedais_2">뮤즈의 사진 외에는 노출 되지\n않아요</string>
    <string name="assign_musedais_3">타인의 사진 도용은 안돼요</string>
    <string name="assign_assignmuse">뮤즈회원으로 가입하세요</string>
    <string name="assign_assignmuse_1">아름다움을 공유하고</string>
    <string name="assign_assignmuse_2">나의 인기를 확인할 수 있어요</string>
    <string name="assign_findmuse">나만의 뮤즈를 발견하세요</string>
    <string name="assign_findmuse_1">내게 영감을 주는 뮤즈를\nLike,Follow 하세요</string>
    <string name="assign_findmuse_2"><u>서비스 약관</u></string>
    <string name="assign_findmuse_3">에 동의합니다</string>
    <string name="assign_muse">뮤즈 가입하기</string>
    <string name="assign_muse_1">실물 프로필 사진을 업로드 하세요</string>
    <string name="maintitle">지금, 세상에서 가장 빛나는 아름다움을\n뮤즈다에서 확인하세요 </string>
    <string name="museintro">뮤즈는 많은 사람들에게 영감과 활력을 주는 아름다운 여성을뜻 합니다.\n\n이제 당신의 사진을 간편하게 업로드 하고 전 세계에 행복한 영감을 줄 수 있습니다.</string>
    <string name="experiancetitle">Login</string>
    <string name="assistance">- SK플래닛 T아카데미 강사 \n\n- 유병한(숭실대학교)</string>
</resources>