<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp" >

        <ImageView
			android:layout_marginLeft="5dp"
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/assign_back_selector"
            android:visibility="invisible" />

        <ImageView
			android:layout_marginRight="5dp"
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/assign_cancel_selector" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/assign_tuto1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_musedais"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/assign_nopic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assign_musedais_1"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/assign_musedais_2"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/assign_musedais_3"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/assign_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/assign_next_selector" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/assign_tuto2_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_assignmuse"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/assign_photo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assign_assignmuse_1"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/assign_assignmuse_2"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/assign_next_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/assign_next_selector" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/assign_tuto3_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="invisible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_findmuse"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/assign_heart" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/assign_findmuse_1"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/check_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/intro_checkbox1" />

                <TextView
                    android:id="@+id/clause_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/assign_findmuse_2"
                    android:textColor="@color/white"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assign_findmuse_3"
                    android:textColor="@color/white"
                    android:textSize="23sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/assign_muse_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/assign_assignmuse_selector" />

        <ImageView
            android:id="@+id/assign_normal_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/assign_assignnormal_selector" />
    </LinearLayout>

</RelativeLayout>